--- a/rqt/rqt_logger_level/plugin.xml
+++ b/rqt/rqt_logger_level/plugin.xml
@@ -1,12 +1,12 @@
 <library path="src">
   <class name="LoggerLevel" type="rqt_logger_level.logger_level.LoggerLevel" base_class_type="rqt_gui_py::Plugin">
     <description>
-      A Python GUI plugin for displaying and changing logger levels.
+      A Python GUI plugin configuring the logger level of ROS nodes.
     </description>
     <qtgui>
-      	<label>Logger Level</label>
-      	<icon type="theme">accessories-text-editor</icon>
-	<statustip>A Python GUI plugin for displaying and changing logger levels.</statustip>
+      <label>Logger Level</label>
+      <icon type="theme">accessories-text-editor</icon>
+      <statustip>A Python GUI plugin configuring the logger level of ROS nodes.</statustip>
     </qtgui>
   </class>
 </library>
