--- a/rqt_logger_level/plugin.xml
+++ b/rqt_logger_level/plugin.xml
@@ -5,7 +5,7 @@
     </description>
     <qtgui>
       <label>Logger Level</label>
-      <icon type="theme">accessories-text-editor</icon>
+      <icon type="theme">format-indent-more</icon>
       <statustip>A Python GUI plugin configuring the logger level of ROS nodes.</statustip>
     </qtgui>
   </class>
