--- a/package.xml
+++ b/package.xml
@@ -5,13 +5,14 @@
    <br />
   rqt_logger_level takes over `wx`-based tool [[rxloggerlevel]].
   </description>
+  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
 
   <license>BSD</license>
 
-  <url type="website">http://ros.org/wiki/rqt_logger_level</url>
-  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
-  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>
+  <url type="website">http://wiki.ros.org/rqt_logger_level</url>
+  <url type="repository">https://github.com/ros-visualization/rqt_logger_level</url>
+  <url type="bugtracker">https://github.com/ros-visualization/rqt_logger_level/issues</url>
 
   <author>Aaron Blasdel</author>
 
@@ -30,5 +31,3 @@
       <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
 </package>
-
-
