--- a/package.xml
+++ b/package.xml
@@ -21,8 +21,11 @@
 
   <exec_depend version_gte="1.0.0">python_qt_binding</exec_depend>
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>rcl_interfaces</exec_depend>
+
   <exec_depend>rqt_gui</exec_depend>
   <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>rqt_py_common</exec_depend>
 
   <export>
     <architecture_independent/>
