--- a/package.xml
+++ b/package.xml
@@ -5,9 +5,9 @@
    <br />
   rqt_logger_level takes over `wx`-based tool [[rxloggerlevel]].
   </description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
   <maintainer email="arne.hitzmann@gmail.com">Arne Hitzmann</maintainer>
+  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
 
   <license>BSD</license>
 
